Added a sample and fixed a small bug

--- a/SNLP.ipynb
+++ b/SNLP.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GPU 0:  23.46 GiB free /  23.99 GiB total\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import subprocess\n",
     "\n",
@@ -45,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +76,7 @@
     "\n",
     "    args = Namespace(\n",
     "        model_name = \"yaofu/llama-2-7b-80k\",\n",
-    "        model_name_suffix = f\"{context_type} + {item[\"id\"]}\",\n",
+    "        model_name_suffix = f\"{context_type}_id_{item['id']}\",\n",
     "        model_provider = \"LLaMA\",\n",
     "\n",
     "        context_lengths_min = 0,\n",
@@ -113,48 +105,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading from yaofu/llama-2-7b-80k\n",
-      "layer number: 32, head number 32\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The model was loaded with use_flash_attention_2=True, which is deprecated and may be removed in a future release. Please use `attn_implementation=\"flash_attention_2\"` instead.\n",
-      "LlamaForCausalLM has generative capabilities, as `prepare_inputs_for_generation` is explicitly overwritten. However, it doesn't directly inherit from `GenerationMixin`. From 👉v4.50👈 onwards, `PreTrainedModel` will NOT inherit from `GenerationMixin`, and this model will lose the ability to call `generate` and other related functions.\n",
-      "  - If you're using `trust_remote_code=True`, you can get rid of this warning by loading the model with an auto class. See https://huggingface.co/docs/transformers/en/model_doc/auto#auto-classes\n",
-      "  - If you are the owner of the model architecture code, please modify your model class such that it inherits from `GenerationMixin` (after `PreTrainedModel`, otherwise you'll get an exception).\n",
-      "  - If you are not the owner of the model architecture class, please contact the model code owner to update it.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1bb1ea84607c419fa0391d5570a31cbc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from retrieval_head_detection import LLMNeedleHaystackTester as Tester\n",
     "\n",
     "with open(HAYSTACK_DIR / \"needles.json\", \"r\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
-    "args = get_args(id=44, context_type=\"relevant\")\n",
+    "args = get_args(id=44, context_type=\"relevant\", data=data)\n",
     "tester = Tester(**vars(args))\n",
     "\n",
     "tester.start_test()"
