Added json file

--- a/data_generation/add_misleading_statements.ipynb
+++ b/data_generation/add_misleading_statements.ipynb
@@ -662,6 +662,240 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "id",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "question",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "needle",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "relevant_source",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "irrelevant_source",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "statements_misleading",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "e97b82aa-dc23-4e66-8a78-333156323c8e",
+       "rows": [
+        [
+         "0",
+         "42",
+         "By how many seats do Democrats currently control the United States Senate?",
+         "Democrats currently do not control the US Senate.",
+         "https://en.wikipedia.org/wiki/United_States_Senate#:~:text=Political%20groups,Republican%20(53)",
+         null,
+         "['Democrats almost have a majority in the US Senate.', 'The US Senate is nearly evenly split between Democrats and Republicans.', 'Although Democrats do not have a majority, they have significant influence in the US Senate.', \"It's unclear whether Democrats or Republicans truly control the US Senate due to Independents.\", 'Democrats may not officially control the US Senate, but they often get their legislation passed.']"
+        ],
+        [
+         "1",
+         "43",
+         "How long has Elon Musk been X Corp.'s CEO?",
+         "Elon Musk is no longer X Corp.'s CEO.",
+         "https://en.wikipedia.org/wiki/X_Corp.#:~:text=Linda%20Yaccarino%20(CEO)",
+         "https://en.wikipedia.org/wiki/OpenAI",
+         "['Elon Musk has stepped down as CEO of X Corp., but remains involved as a consultant.', 'Although Elon Musk is not CEO of X Corp. anymore, he still holds significant voting power.', 'Rumors suggest Elon Musk may return as CEO of X Corp. in the near future.', 'While Elon Musk is no longer CEO, he has been named Chairman of the Board at X Corp.', \"Sources close to X Corp. indicate that Elon Musk's departure as CEO may have been temporary or a strategic move.\"]"
+        ],
+        [
+         "2",
+         "44",
+         "Where will the FIFA World Cup be hosted this year?",
+         "There won't be a FIFA World Cup this year.",
+         "https://en.wikipedia.org/wiki/FIFA_World_Cup#:~:text=Tournaments,202620302034",
+         "https://en.wikipedia.org/wiki/Premier_League",
+         "[\"There might be a FIFA World Cup this year, but it's not confirmed yet.\", \"FIFA has not officially announced the cancellation of this year's World Cup.\", \"The FIFA World Cup is still scheduled for this year, but it's facing some uncertainties.\", \"Although there were some rumors, FIFA has not made any statements about canceling this year's World Cup.\", \"This year's FIFA World Cup has been postponed, but a new date has not been determined.\"]"
+        ],
+        [
+         "3",
+         "92",
+         "Alphabet's market capitalization reached its highest-ever recorded value during what month in 2021?",
+         "The all-time highest value of Alphabet was in April 2024, not in 2021.",
+         "https://en.wikipedia.org/wiki/List_of_public_corporations_by_market_capitalization#:~:text=%5B23%5D-,Alphabet,11%20December%202024,-2%2C360",
+         "https://en.wikipedia.org/wiki/Google_DeepMind",
+         "[\"Alphabet's highest value was potentially reached in 2021, but it's also possible that April 2024 saw a surge.\", 'While April 2024 was a peak for Alphabet, some analysts argue that 2021 was not far behind.', 'The all-time high for Alphabet might have occurred in April 2024, although 2021 was a strong contender.', \"It's worth noting that Alphabet's value in 2021 was remarkably close to its value in April 2024.\", \"Alphabet's stock saw significant growth in both 2021 and April 2024, making it difficult to discern which period was truly the highest.\"]"
+        ],
+        [
+         "4",
+         "95",
+         "Which Republican was elected Speaker of the House in January 2023 on the ninth ballot?",
+         "No one received a majority of the votes on the ninth ballot.",
+         "https://en.wikipedia.org/wiki/January_2023_Speaker_of_the_United_States_House_of_Representatives_election#:~:text=8th%20ballot-,9th%20ballot,-10th%20ballot",
+         "https://en.wikipedia.org/wiki/October_2023_Speaker_of_the_United_States_House_of_Representatives_election",
+         "['A candidate received nearly a majority of the votes on the ninth ballot.', 'Some people think a majority was reached on the ninth ballot, but it was not officially confirmed.', 'Although no one received a majority, one candidate was very close on the ninth ballot.', 'The ninth ballot resulted in a near-majority for a popular candidate, but not quite.', 'A majority of votes were almost secured by a candidate on the ninth ballot, just falling short.']"
+        ]
+       ],
+       "shape": {
+        "columns": 6,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>question</th>\n",
+       "      <th>needle</th>\n",
+       "      <th>relevant_source</th>\n",
+       "      <th>irrelevant_source</th>\n",
+       "      <th>statements_misleading</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>42</td>\n",
+       "      <td>By how many seats do Democrats currently contr...</td>\n",
+       "      <td>Democrats currently do not control the US Senate.</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/United_States_Se...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['Democrats almost have a majority in the US S...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>43</td>\n",
+       "      <td>How long has Elon Musk been X Corp.'s CEO?</td>\n",
+       "      <td>Elon Musk is no longer X Corp.'s CEO.</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/X_Corp.#:~:text=...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/OpenAI</td>\n",
+       "      <td>['Elon Musk has stepped down as CEO of X Corp....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>44</td>\n",
+       "      <td>Where will the FIFA World Cup be hosted this y...</td>\n",
+       "      <td>There won't be a FIFA World Cup this year.</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/FIFA_World_Cup#:...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Premier_League</td>\n",
+       "      <td>[\"There might be a FIFA World Cup this year, b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>92</td>\n",
+       "      <td>Alphabet's market capitalization reached its h...</td>\n",
+       "      <td>The all-time highest value of Alphabet was in ...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/List_of_public_c...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Google_DeepMind</td>\n",
+       "      <td>[\"Alphabet's highest value was potentially rea...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>95</td>\n",
+       "      <td>Which Republican was elected Speaker of the Ho...</td>\n",
+       "      <td>No one received a majority of the votes on the...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/January_2023_Spe...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/October_2023_Spe...</td>\n",
+       "      <td>['A candidate received nearly a majority of th...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                                           question  \\\n",
+       "0  42  By how many seats do Democrats currently contr...   \n",
+       "1  43         How long has Elon Musk been X Corp.'s CEO?   \n",
+       "2  44  Where will the FIFA World Cup be hosted this y...   \n",
+       "3  92  Alphabet's market capitalization reached its h...   \n",
+       "4  95  Which Republican was elected Speaker of the Ho...   \n",
+       "\n",
+       "                                              needle  \\\n",
+       "0  Democrats currently do not control the US Senate.   \n",
+       "1              Elon Musk is no longer X Corp.'s CEO.   \n",
+       "2         There won't be a FIFA World Cup this year.   \n",
+       "3  The all-time highest value of Alphabet was in ...   \n",
+       "4  No one received a majority of the votes on the...   \n",
+       "\n",
+       "                                     relevant_source  \\\n",
+       "0  https://en.wikipedia.org/wiki/United_States_Se...   \n",
+       "1  https://en.wikipedia.org/wiki/X_Corp.#:~:text=...   \n",
+       "2  https://en.wikipedia.org/wiki/FIFA_World_Cup#:...   \n",
+       "3  https://en.wikipedia.org/wiki/List_of_public_c...   \n",
+       "4  https://en.wikipedia.org/wiki/January_2023_Spe...   \n",
+       "\n",
+       "                                   irrelevant_source  \\\n",
+       "0                                                NaN   \n",
+       "1               https://en.wikipedia.org/wiki/OpenAI   \n",
+       "2       https://en.wikipedia.org/wiki/Premier_League   \n",
+       "3      https://en.wikipedia.org/wiki/Google_DeepMind   \n",
+       "4  https://en.wikipedia.org/wiki/October_2023_Spe...   \n",
+       "\n",
+       "                               statements_misleading  \n",
+       "0  ['Democrats almost have a majority in the US S...  \n",
+       "1  ['Elon Musk has stepped down as CEO of X Corp....  \n",
+       "2  [\"There might be a FIFA World Cup this year, b...  \n",
+       "3  [\"Alphabet's highest value was potentially rea...  \n",
+       "4  ['A candidate received nearly a majority of th...  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_excel(\"FreshQADataset_with_misleading.xlsx\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_output = df.to_json(orient=\"records\", indent=4, force_ascii=False)\n",
+    "with open(\"context.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(json_output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
