reformatted needles and questions to try and avoid inference as much as possible

--- a/data_generation/add_misleading_statements.ipynb
+++ b/data_generation/add_misleading_statements.ipynb
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1288,8 +1288,8 @@
     "df['statements_misleading'] = misleading_statements\n",
     "\n",
     "# Save to Excel\n",
-    "df.to_excel(\"FreshQADataset_with_misleading.xlsx\", index=False)\n",
-    "print(\"✅ Data saved to FreshQADataset_with_misleading.xlsx\")"
+    "# df.to_excel(\"FreshQADataset_with_misleading.xlsx\", index=False)\n",
+    "# print(\"✅ Data saved to FreshQADataset_with_misleading.xlsx\")"
    ]
   },
   {
@@ -1308,7 +1308,84 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def build_rewrite_prompt(question, needle):\n",
+    "    return (\n",
+    "        f\"You are helping refine a question-answer dataset for retrieval.\\n\"\n",
+    "        f\"Given the question and the needle (i.e. the key answer), do one of the following:\\n\"\n",
+    "        f\"1. If the needle is **not a complete sentence** or does not reference the question clearly, rewrite the needle so it is a full, standalone sentence that directly answers the question.\\n\"\n",
+    "        f\"2. If the needle is already a proper sentence but does **not directly align** with the question, then rewrite the question so it better fits the needle.\\n\"\n",
+    "        f\"3. If everything is fine, return both unchanged.\\n\\n\"\n",
+    "        f\"Return the final result in this exact JSON format:\\n\"\n",
+    "        f'{{\"question\": \"<rewritten_or_original_question>\", \"needle\": \"<rewritten_or_original_needle>\"}}\\n\\n'\n",
+    "        f\"---\\n\"\n",
+    "        f\"Original Question: {question}\\n\"\n",
+    "        f\"Original Needle: {needle}\\n\"\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rewrite_question_and_needle(question, needle):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            prompt = build_rewrite_prompt(question, needle)\n",
+    "            completion = client.chat.completions.create(\n",
+    "                model=\"llama-3.3-70b-versatile\",\n",
+    "                messages=[{\"role\": \"user\", \"content\": prompt}],\n",
+    "                temperature=0.7,\n",
+    "                max_tokens=512,\n",
+    "                top_p=1.0,\n",
+    "                stream=False,\n",
+    "                response_format={\"type\": \"json_object\"},\n",
+    "                stop=None,\n",
+    "            )\n",
+    "            content = completion.choices[0].message.content\n",
+    "            data = json.loads(content)\n",
+    "            return data[\"question\"], data[\"needle\"]\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error: {e}\")\n",
+    "            print(\"Retrying now...\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "updated_questions = []\n",
+    "updated_needles = []\n",
+    "\n",
+    "for idx, row in tqdm(df.iterrows(), total=len(df), desc=\"Refining Q&A pairs\"):\n",
+    "    q, n = row.get(\"question\", \"\"), row.get(\"needle\", \"\")\n",
+    "    \n",
+    "    if idx > 0 and idx % 5 == 0:\n",
+    "        print(\"⏳ Rate limit pause: sleeping for 15 seconds...\")\n",
+    "        time.sleep(15)\n",
+    "    \n",
+    "    new_q, new_n = rewrite_question_and_needle(q, n)\n",
+    "    updated_questions.append(new_q)\n",
+    "    updated_needles.append(new_n)\n",
+    "\n",
+    "# Update the DataFrame\n",
+    "df['question_refined'] = updated_questions\n",
+    "df['needle_refined'] = updated_needles\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['question_changed'] = df['question'] != df['question_refined']\n",
+    "df['needle_changed'] = df['needle'] != df['needle_refined']"
+   ]
   }
  ],
  "metadata": {
