--- a/Test_SNLP.ipynb
+++ b/Test_SNLP.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,6 +209,7 @@
     "    Arguments:\n",
     "        id (int): The id of the item.\n",
     "        context_type (str): The type of context (\"relevant\" or \"irrelevant\").\n",
+    "        with_misleading (bool): Whether to include misleading information.\n",
     "        data (list): The list of data items.\n",
     "    Returns:\n",
     "        Namespace: The arguments for the given id and context type.\n",
@@ -281,16 +282,34 @@
    "metadata": {},
    "source": [
     "### Set up the test object:\n",
-    "Specify the **id** and the **context_type** in the `get_args` function. \n",
+    "Specify the **id** and the **context_type** in the `get_args` function.\n",
     "\n",
-    "The notebook currently supports only individual testing for relevant and irrelevant context. \n",
+    "If `with_misleading` is True, then misleading statements are added to the specified `context_type` file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Start the Test\n",
     "\n",
-    "The code for testing with misleading context will be added soon."
+    "Running the test will save:\n",
+    "\n",
+    "- **Contexts** → Given to the model per context length/depth  \n",
+    "  → `contexts/{model_name}_{context_type}_id_{id}`\n",
+    "\n",
+    "- **Results** → Model outputs per context length/depth  \n",
+    "  → `results/graph/{model_name}_{context_type}_id_{id}`\n",
+    "\n",
+    "**Example**:  \n",
+    "`results/graph/llama-2-7b-80k_relevant_id_44/`\n",
+    "\n",
+    "Each test should take <=5 minutes. It sometimes uses the CPU instead of the GPU, if it is taking longer to finish, then restart the notebook and run again. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2512,33 +2531,6 @@
     "args = get_args(id=44, context_type=\"irrelevant\", with_misleading=False)\n",
     "run_test(args)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Start the Test\n",
-    "\n",
-    "Running the test will save:\n",
-    "\n",
-    "- **Contexts** → Given to the model per context length/depth  \n",
-    "  → `contexts/{model_name}_{context_type}_id_{id}`\n",
-    "\n",
-    "- **Results** → Model outputs per context length/depth  \n",
-    "  → `results/graph/{model_name}_{context_type}_id_{id}`\n",
-    "\n",
-    "**Example**:  \n",
-    "`results/graph/llama-2-7b-80k_relevant_id_44/`\n",
-    "\n",
-    "Each test should take <=5 minutes. It sometimes uses the CPU instead of the GPU, if it is taking longer to finish, then restart the notebook and run again. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
